--- a/src/partials/head-styles.hbs
+++ b/src/partials/head-styles.hbs
@@ -1,3 +1,3 @@
 {{!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" /> --}}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@beta" />
 <link rel="stylesheet" href="{{{uiRootPath}}}/css/site.css">
