--- a/src/partials/footer-scripts.hbs
+++ b/src/partials/footer-scripts.hbs
@@ -42,12 +42,12 @@
 
 <script type="text/javascript">
   docsearch({
-    appId: 'PMZUYBQDAK',
-    apiKey: '24b09689d5b4223813d9b8e48563c8f6',
-    indexName: 'docsearch',
+    appId: 'NZWE7TXMBR',
+    apiKey: '9117a4e7751be182a32d4e70a11d176a',
+    indexName: 'magnolia-cms',
     container: '#searchBar',
     searchParameters: { hitsPerPage: 12, attributesToHighlight: ["hierarchy.lvl0"] },
-    askAi: 'askAIDemo'
+    askAi: 'C6xQL7oXbB6z'
   });
 
     function toggleDropDown () {
