--- a/src/partials/footer-scripts.hbs
+++ b/src/partials/footer-scripts.hbs
@@ -10,14 +10,14 @@
 {{#if (and (eq page.layout 'default') (eq page.componentVersion.displayVersion '6.3 rc'))}}
 
 <script type="text/javascript">
-    docsearch({
-        appId: 'IIQKXJ786V',
-        apiKey: '450fd6db7d4e2f26607012f0d8683a29',
-        indexName: 'dev_DOCS_6.3',
-        container: '#searchBar',
-        searchParameters: { hitsPerPage: 12, attributesToHighlight: ["hierarchy.lvl0"] },
-        debug: true // prevent it from closing on inspection.
-    });
+  docsearch({
+    appId: 'NZWE7TXMBR',
+    apiKey: '9117a4e7751be182a32d4e70a11d176a',
+    indexName: 'magnolia-cms',
+    container: '#searchBar',
+    searchParameters: { hitsPerPage: 12, attributesToHighlight: ["hierarchy.lvl0"] },
+    askAi: 'C6xQL7oXbB6z'
+  });
 
     function toggleDropDown () {
       var linkEl = document.querySelectorAll('.has-dropdown');
@@ -73,14 +73,14 @@
 
 {{#if (eq page.layout 'cloud')}}
 <script type="text/javascript">
-    docsearch({
-        appId: 'IIQKXJ786V',
-        apiKey: '450fd6db7d4e2f26607012f0d8683a29',
-        indexName: 'dev_DOCS',
-        container: '#searchBar',
-        searchParameters: { hitsPerPage: 12 },
-        debug: true // prevent it from closing on inspection.
-    });
+  docsearch({
+    appId: 'NZWE7TXMBR',
+    apiKey: '9117a4e7751be182a32d4e70a11d176a',
+    indexName: 'magnolia-cms',
+    container: '#searchBar',
+    searchParameters: { hitsPerPage: 12, attributesToHighlight: ["hierarchy.lvl0"] },
+    askAi: 'C6xQL7oXbB6z'
+  });
 
     function toggleDropDown () {
       var linkEl = document.querySelectorAll('.has-dropdown');
@@ -104,14 +104,14 @@
 
 {{#if (eq page.layout 'changelog')}}
 <script type="text/javascript">
-    docsearch({
-        appId: 'IIQKXJ786V',
-        apiKey: '450fd6db7d4e2f26607012f0d8683a29',
-        indexName: 'dev_DOCS',
-        container: '#searchBar',
-        searchParameters: { hitsPerPage: 12 },
-        debug: true // prevent it from closing on inspection.
-    });
+  docsearch({
+    appId: 'NZWE7TXMBR',
+    apiKey: '9117a4e7751be182a32d4e70a11d176a',
+    indexName: 'magnolia-cms',
+    container: '#searchBar',
+    searchParameters: { hitsPerPage: 12, attributesToHighlight: ["hierarchy.lvl0"] },
+    askAi: 'C6xQL7oXbB6z'
+  });
 
     function toggleDropDown () {
       var linkEl = document.querySelectorAll('.has-dropdown');
@@ -135,14 +135,14 @@
 
 {{#if (eq page.layout 'incubate')}}
 <script type="text/javascript">
-    docsearch({
-        appId: 'IIQKXJ786V',
-        apiKey: '450fd6db7d4e2f26607012f0d8683a29',
-        indexName: 'dev_DOCS',
-        container: '#searchBar',
-        searchParameters: { hitsPerPage: 12 },
-        debug: true // prevent it from closing on inspection.
-    });
+  docsearch({
+    appId: 'NZWE7TXMBR',
+    apiKey: '9117a4e7751be182a32d4e70a11d176a',
+    indexName: 'magnolia-cms',
+    container: '#searchBar',
+    searchParameters: { hitsPerPage: 12, attributesToHighlight: ["hierarchy.lvl0"] },
+    askAi: 'C6xQL7oXbB6z'
+  });
 
     function toggleDropDown () {
       var linkEl = document.querySelectorAll('.has-dropdown');
@@ -166,14 +166,14 @@
 
 {{#if (eq page.layout 'paas')}}
 <script type="text/javascript">
-    docsearch({
-        appId: 'IIQKXJ786V',
-        apiKey: '450fd6db7d4e2f26607012f0d8683a29',
-        indexName: 'dev_DOCS',
-        container: '#searchBar',
-        searchParameters: { hitsPerPage: 12, attributesToHighlight: ["hierarchy.lvl0"] },
-        debug: true // prevent it from closing on inspection.
-    });
+  docsearch({
+    appId: 'NZWE7TXMBR',
+    apiKey: '9117a4e7751be182a32d4e70a11d176a',
+    indexName: 'magnolia-cms',
+    container: '#searchBar',
+    searchParameters: { hitsPerPage: 12, attributesToHighlight: ["hierarchy.lvl0"] },
+    askAi: 'C6xQL7oXbB6z'
+  });
 
     function toggleDropDown () {
       var linkEl = document.querySelectorAll('.has-dropdown');
@@ -197,15 +197,14 @@
 
 {{#if (eq page.layout 'home')}}
 <script type="text/javascript">
-    docsearch({
-        appId: 'IIQKXJ786V',
-        apiKey: '450fd6db7d4e2f26607012f0d8683a29',
-        indexName: 'landing_page',
-        container: '#searchBar',
-        searchParameters: { hitsPerPage: 12, attributesToHighlight: ["hierarchy.lvl0"] },
-        debug: true // prevent it from closing on inspection.
-    });
-
+  docsearch({
+    appId: 'NZWE7TXMBR',
+    apiKey: '9117a4e7751be182a32d4e70a11d176a',
+    indexName: 'magnolia-cms',
+    container: '#searchBar',
+    searchParameters: { hitsPerPage: 12, attributesToHighlight: ["hierarchy.lvl0"] },
+    askAi: 'C6xQL7oXbB6z'
+  });
     function toggleDropDown () {
       var linkEl = document.querySelectorAll('.has-dropdown');
       var allDrops =  document.querySelectorAll('.has-dropdown .navbar-dropdown');
