--- a/src/partials/search.hbs
+++ b/src/partials/search.hbs
@@ -58,3 +58,14 @@
     });
   });
 </script>
+
+<script>
+
+  document.addEventListener('DOMContentLoaded', () => {
+  const placeholder = document.querySelector('.DocSearch-Button-Placeholder');
+  if (placeholder) {
+    placeholder.textContent = 'Search docs or Ask AI';
+  }
+});
+
+</script>
