--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -83,11 +83,7 @@
     }
 
     .DocSearch-Button-Container {
-        margin-left: auto;
-        width: 113px;
-        height: 100%;
-        background-color: var(--green);
-        justify-content: center;
+      display: none;
     }
 
     .DocSearch-Button-Container svg path {
