small adjustment for cards in carousels

--- a/src/layouts/incubate-home.hbs
+++ b/src/layouts/incubate-home.hbs
@@ -524,6 +524,10 @@
 .tier-carousel .slick-dots {
   padding-top: 10px;
 }
+
+.slick-track {
+  padding: 3rem 0 !important;
+}
   </style>
 </head>
 
