tweak incubator landing

--- a/src/layouts/incubate-home.hbs
+++ b/src/layouts/incubate-home.hbs
@@ -806,7 +806,7 @@
   <div class="container">
     <div class="columns">
       <div class="column is-8-desktop is-10-tablet">
-        <h2 class="subtitled subtitle">🧪 Tier 2: Early stage or inactive</h2>
+        <h2 class="subtitled subtitle">🧪 Tier 2: Early stage or parked</h2>
         <p class="paragraph">
           Provided “as is,” with limited or no updates. 
           These modules may carry risk, are not tested against upcoming Magnolia versions, 
@@ -818,7 +818,7 @@
     <div class="tier-carousel tier2-carousel">
       <div class="column is-4-widescreen is-6-desktop is-6-tablet">
         <div class="card-x">
-          <div class="experimental-badge">INACTIVE</div>
+
           <h3 class="card-x__title h3">
             <i class="fa fa-folder-open" aria-hidden="true"></i> 
             Celum DAM Connector
@@ -837,7 +837,7 @@
 
       <div class="column is-4-widescreen is-6-desktop is-6-tablet">
         <div class="card-x">
-          <div class="experimental-badge">INACTIVE</div>
+
           <h3 class="card-x__title h3">
             <i class="fa fa-map" aria-hidden="true"></i> 
             Customer Journey Mapping
@@ -856,7 +856,7 @@
 
       <div class="column is-4-widescreen is-6-desktop is-6-tablet">
         <div class="card-x">
-          <div class="experimental-badge">INACTIVE</div>
+
           <h3 class="card-x__title h3">
             <i class="fa fa-external-link-square" aria-hidden="true"></i> 
             Content Exporter
@@ -875,7 +875,7 @@
 
       <div class="column is-4-widescreen is-6-desktop is-6-tablet">
         <div class="card-x">
-          <div class="experimental-badge">INACTIVE</div>
+
           <h3 class="card-x__title h3">
             <i class="fa fa-comments-o" aria-hidden="true"></i> 
             WeChat Login
@@ -894,7 +894,7 @@
 
       <div class="column is-4-widescreen is-6-desktop is-6-tablet">
         <div class="card-x">
-          <div class="experimental-badge">INACTIVE</div>
+
           <h3 class="card-x__title h3">
             <i class="fa fa-code" aria-hidden="true"></i> 
             Content locking
@@ -913,7 +913,7 @@
 
       <div class="column is-4-widescreen is-6-desktop is-6-tablet">
         <div class="card-x">
-          <div class="experimental-badge">INACTIVE</div>
+
           <h3 class="card-x__title h3">
             <i class="fa fa-snowflake-o" aria-hidden="true"></i> 
             Freeze
