slide dialog announcement

--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -599,6 +599,8 @@
   </section>
   {{> footer}}
 
+  {{> slide-dialog}}
+
   <script>
   document.addEventListener('DOMContentLoaded', function () {
     var navbarToggles = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0)
