dialog change for RC

--- a/src/partials/slide-dialog.hbs
+++ b/src/partials/slide-dialog.hbs
@@ -59,7 +59,7 @@
     <button class="slide-dialog__close" type="button" aria-label="Dismiss notice">&times;</button>
     <div class="slide-dialog__content">
       <div class="slide-dialog__title">Magnolia 6.4 is coming</div>
-      <p class="slide-dialog__text">Magnolia 6.4 is currently in beta. GA is coming soon. 
+      <p class="slide-dialog__text">Magnolia 6.4 is currently a RC. GA is coming soon. 
         For a sneak peek, check out the <a href="{{{siteRootPath}}}/product-docs/releases/release-notes-for-magnolia-cms-6.4/">Magnolia 6.4 Release notes</a>.</p>
     </div>
   </div>
